--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weekly-report",
+  "name": "git-details",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,41 +7,29 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "json-server": "json-server --watch db.json --port 3004"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
-    "@angular/cdk": "^8.0.1",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/core": "~8.0.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.1",
-    "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/router": "~8.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "angular-calendar": "^0.27.15",
-    "angular-google-charts": "^0.1.6",
-    "angularx-flatpickr": "^6.1.0",
-    "bootstrap": "^4.3.1",
-    "date-fns": "^1.30.1",
-    "flatpickr": "^4.6.2",
-    "moment": "^2.24.0",
-    "ngx-bootstrap": "^5.1.0",
-    "ngx-pipes": "^2.5.6",
+    "@angular/animations": "^8.2.13",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/core": "~8.2.5",
+    "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/router": "~8.2.5",
     "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.4",
-    "@angular/compiler-cli": "~8.0.1",
-    "@angular/language-service": "~8.0.1",
+    "@angular-devkit/build-angular": "~0.803.4",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -56,6 +44,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.5.3"
   }
 }
